--- a/public/interests.html
+++ b/public/interests.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Alex Braunscheidel</title>
+  <title>Survivor</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/site.css">
 </head>
@@ -31,8 +31,8 @@
       </nav>
     </div>
   </header>
+  <div class = "row">
+  </div>
 </div>
-
-
 </body>
 </html>
