added table and form to interest page added image/info to about me page

--- a/public/about-me.html
+++ b/public/about-me.html
@@ -10,7 +10,6 @@
   <header class = "row">
     <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -31,6 +30,17 @@
       </nav>
     </div>
   </header>
+
+  <div class = "row">
+    <a href="img/dan-fuego-memory.gif" > <img class = "img-thumbnail" src = "img/dan-fuego-memory.gif" alt = "pic of the greatest" height= 100%></a>
+    <p>Daniel "Dan Fuego" Barry<br>
+      Origin: Panama<br>
+      Born: December 30, 1953<br>
+      Age: None of your business<br>
+      Email: <a href = mailto:abraunsc@iu.edu>abraunsc@iu.edu</a><br>
+
+    </p>
+    </body>
 </div>
 </body>
 </html>
