--- a/public/interests.html
+++ b/public/interests.html
@@ -10,7 +10,6 @@
   <header class = "row">
     <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,6 +32,80 @@
   </header>
   <div class = "row">
   </div>
+  <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Title</th>
+      <th scope="col">Author</th>
+      <th scope="col">Year Published</th>
+      <th scope="col">Publisher</th>
+      <th scope="col">Page Count</th>
+      <th scope="col">MSRP</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>@twitter</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">4</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>@twitter</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+  </tbody>
+</table>
+
+<form>
+<div class ="form-group">
+  <label>Title</label>
+  <input type = "text"></input>
+</div>
+<div class ="form-group">
+  <label>Author</label>
+  <input type = "text"></input>
+</div>
+<div class ="form-group">
+  <label>Year Published</label>
+  <input type = "number" min = 1000 max = 2019></input>
+</div>
+<div class ="form-group">
+  <label>Publisher</label>
+  <input type = "text"></input>
+</div>
+<div class ="form-group">
+  <label>Page Count</label>
+  <input type = "number"></input>
+</div>
+<div class ="form-group">
+  <label>MSRP</label>
+  <input type = "number" min="0.01" step="0.01"></input>
+</div>
+<a class="btn btn-primary" href="#" role="button">Add Book</a>
+</form>
 </div>
 </body>
 </html>
