--- a/public/about-me.html
+++ b/public/about-me.html
@@ -3,18 +3,15 @@
 <head>
   <title>About Me</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/site.css">
+  <link rel="stylesheet" href="css/site.css">
 </head>
 <body>
 <div class = "container">
+    <!-- navbar taken from bootstrap-->
   <header class = "row">
     <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <nav class="navbar navbar-expand-sm navbar-light header">
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="index.html">Home</a>
@@ -26,18 +23,18 @@
               <a class="nav-link" href="interests.html">Interests</a>
             </li>
           </ul>
-        </div>
       </nav>
     </div>
   </header>
 
   <div class = "row">
     <a href="img/dan-fuego-memory.gif" > <img class = "img-thumbnail" src = "img/dan-fuego-memory.gif" alt = "pic of the greatest" height= 100%></a>
+<p><cite>Credit to https://news.cornell.edu/stories/1997/09/space-shuttle-experience-topic-cornell-astronaut-alum-daniel-barry-oct-7-talk</cite></p>
     <p>Daniel "Dan Fuego" Barry<br>
       Origin: Panama<br>
       Born: December 30, 1953<br>
       Age: None of your business<br>
-      Email: <a href = mailto:abraunsc@iu.edu>abraunsc@iu.edu</a><br>
+      Email: <a class = "linkies" href = mailto:abraunsc@iu.edu>abraunsc@iu.edu</a><br>
 
     </p>
     </body>
