--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,16 @@
 <head>
   <title>Alex Braunscheidel</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/site.css">
+  <link rel="stylesheet" href="css/site.css">
 </head>
 <body>
 <div class = "container">
+
+  <!-- navbar taken from bootstrap-->
   <header class = "row">
     <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <nav class="navbar navbar-expand-sm navbar-light header">
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="index.html">Home</a>
@@ -26,10 +24,14 @@
               <a class="nav-link" href="interests.html">Interests</a>
             </li>
           </ul>
-        </div>
       </nav>
     </div>
   </header>
+    <div class = "row">
+      <a href="img/dan-fuego-astro.jpg" > <img class = "img-thumbnail" src = "img/dan-fuego-astro.jpg" alt = "in his natural home" height= 100%></a>
+      <p><cite>Credit to https://en.wikipedia.org/wiki/Daniel_T._Barry</cite></p>
+      <h1 id="sicktext">He's Dan. He's Fuego. He's your mother's favorite Survivor. Learn more about the guy who transcends fame</h1>
+    </div>
 </div>
 
 
