--- a/public/interests.html
+++ b/public/interests.html
@@ -3,18 +3,15 @@
 <head>
   <title>Survivor</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/site.css">
+  <link rel="stylesheet" href="css/site.css">
 </head>
 <body>
 <div class = "container">
+    <!-- navbar taken from bootstrap-->
   <header class = "row">
     <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <nav class="navbar navbar-expand-sm navbar-light header">
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="index.html">Home</a>
@@ -26,15 +23,14 @@
               <a class="nav-link" href="interests.html">Interests</a>
             </li>
           </ul>
-        </div>
       </nav>
     </div>
   </header>
   <div class = "row">
   </div>
-  <table class="table">
+  <table class="table tables cooltext">
   <thead>
-    <tr>
+    <tr class = "cooltext" id = "sicktext">
       <th scope="col">Title</th>
       <th scope="col">Author</th>
       <th scope="col">Year Published</th>
@@ -45,36 +41,36 @@
   </thead>
   <tbody>
     <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+      <th scope="row">WHAT ARE YOU BABBLING ABOUT</th>
+      <td>Shane Powers</td>
+      <td>2006</td>
+      <td>Boston Publishing</td>
+      <td>2000</td>
+      <td>$31</td>
     </tr>
     <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+      <th scope="row">Constipation is Only a Mental State</th>
+      <td>Bruce Kanegai</td>
+      <td>2006</td>
+      <td>Probst, Inc.</td>
+      <td>2</td>
+      <td>$21</td>
     </tr>
     <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+      <th scope="row">Somebody Call the Wambulance!</th>
+      <td>Terry Deitz</td>
+      <td>2006</td>
+      <td>Casa del Charmin</td>
+      <td>911</td>
+      <td>$1200</td>
     </tr>
     <tr>
-      <th scope="row">4</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+      <th scope="row">Did You Know I Was an Astronaut?</th>
+      <td>Dan Barry</td>
+      <td>2006</td>
+      <td>Exile Island</td>
+      <td>113</td>
+      <td>$79</td>
     </tr>
   </tbody>
 </table>
