--- a/public/about-me.html
+++ b/public/about-me.html
@@ -29,11 +29,11 @@
 
   <div class = "row">
     <a href="img/dan-fuego-memory.gif" > <img class = "img-thumbnail" src = "img/dan-fuego-memory.gif" alt = "pic of the greatest" height= 100%></a>
-<p><cite>Credit to https://news.cornell.edu/stories/1997/09/space-shuttle-experience-topic-cornell-astronaut-alum-daniel-barry-oct-7-talk</cite></p>
-    <p>Daniel "Dan Fuego" Barry<br>
+<p><cite id = "sicktext">Credit to https://news.cornell.edu/stories/1997/09/space-shuttle-experience-topic-cornell-astronaut-alum-daniel-barry-oct-7-talk</cite></p>
+    <p class = "cooltext">Daniel "Dan Fuego" Barry<br>
       Origin: Panama<br>
       Born: December 30, 1953<br>
-      Age: None of your business<br>
+      Age: ???<br>
       Email: <a class = "linkies" href = mailto:abraunsc@iu.edu>abraunsc@iu.edu</a><br>
 
     </p>
